--- a/src/main/resources/org/meltzg/jmlm/client/MainSceneView.fxml
+++ b/src/main/resources/org/meltzg/jmlm/client/MainSceneView.fxml
@@ -1,14 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.StackPane?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.172-ea"
-            xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.meltzg.jmlm.client.MainSceneController">
-    <children>
-        <Button fx:id="btnShowDateTime" layoutX="101.0" layoutY="79.0" mnemonicParsing="false" onAction="#showDateTime"
-                text="Show Date Time"/>
-        <TextField fx:id="txtDateTime" editable="false" layoutX="78.0" layoutY="187.0"/>
-    </children>
-</AnchorPane>
+<BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.meltzg.jmlm.client.MainSceneController">
+    <top>
+        <MenuBar BorderPane.alignment="CENTER">
+            <Menu mnemonicParsing="false" text="File">
+                <MenuItem mnemonicParsing="false" onAction="#openDeviceManager" text="Manage Devices"/>
+            </Menu>
+        </MenuBar>
+    </top>
+    <center>
+        <StackPane fx:id="mainArea">
+            <fx:include fx:id="libraryView" source="LibraryManagerView.fxml" />
+            <fx:include fx:id="deviceManagerView" source="DeviceManagerView.fxml" />
+        </StackPane>
+    </center>
+</BorderPane>
