--- a/src/main/resources/org/meltzg/jmlm/ui/MainApplicationView.fxml
+++ b/src/main/resources/org/meltzg/jmlm/ui/MainApplicationView.fxml
@@ -5,21 +5,22 @@
 <BorderPane xmlns:fx="http://javafx.com/fxml/1" prefHeight="400.0" prefWidth="600.0"
             xmlns="http://javafx.com/javafx/8.0.172-ea" fx:controller="org.meltzg.jmlm.ui.MainApplicationController"
             fx:id="mainView">
-    <center>
-        <TabPane>
-            <tabs>
-                <Tab closable="false" text="Device Manager">
-                    <fx:include source="DeviceManagerView.fxml"/>
-                </Tab>
-            </tabs>
-        </TabPane>
-    </center>
+    <!--<center>-->
+        <!--<TabPane>-->
+            <!--<tabs>-->
+                <!--<Tab closable="false" text="Device Manager">-->
+                    <!--<fx:include source="DeviceManagerView.fxml"/>-->
+                <!--</Tab>-->
+            <!--</tabs>-->
+        <!--</TabPane>-->
+    <!--</center>-->
     <top>
         <MenuBar BorderPane.alignment="CENTER">
             <menus>
                 <Menu mnemonicParsing="false" text="File">
                     <items>
-                        <MenuItem onAction="#exit" mnemonicParsing="false" text="Close"/>
+                        <MenuItem onAction="#openDeviceManager" text="Device Manager"/>
+                        <MenuItem onAction="#exit" text="Close"/>
                     </items>
                 </Menu>
             </menus>
