--- a/src/main/resources/org/meltzg/jmlm/ui/components/DeviceWizardView.fxml
+++ b/src/main/resources/org/meltzg/jmlm/ui/components/DeviceWizardView.fxml
@@ -3,10 +3,14 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.StackPane?>
 <BorderPane xmlns:fx="http://javafx.com/fxml"
             xmlns="http://javafx.com/javafx"
             fx:controller="org.meltzg.jmlm.ui.components.DeviceWizardController"
             prefHeight="400.0" prefWidth="600.0">
+    <center>
+        <StackPane fx:id="deviceBuilder"/>
+    </center>
     <bottom>
         <HBox alignment="BOTTOM_RIGHT">
             <Button onAction="#createDevice" text="Create"/>
