--- a/src/main/resources/org/meltzg/jmlm/ui/components/DeviceWizardView.fxml
+++ b/src/main/resources/org/meltzg/jmlm/ui/components/DeviceWizardView.fxml
@@ -1,18 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.StackPane?>
 
+<?import org.meltzg.jmlm.ui.components.controls.DeviceNameControl?>
 <BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.meltzg.jmlm.ui.components.DeviceWizardController">
     <bottom>
         <HBox alignment="BOTTOM_RIGHT">
-            <Button onAction="#createDevice" text="Create" />
-            <Button onAction="#closeWizard" text="Cancel" />
+            <Button fx:id="btnBack" onAction="#goBackControl" text="Back" />
+            <Button fx:id="btnNext" defaultButton="true" onAction="#goNextControl" text="Next" />
+            <Button fx:id="btnCreate" onAction="#createDevice" text="Create" />
+            <Button cancelButton="true" onAction="#closeWizard" text="Cancel" />
         </HBox>
     </bottom>
    <center>
-      <TextField fx:id="deviceName" BorderPane.alignment="CENTER" />
+       <StackPane fx:id="deviceBuilder" />
    </center>
 </BorderPane>
