--- a/src/main/resources/org/meltzg/jmlm/ui/components/controls/DeviceNameControlView.fxml
+++ b/src/main/resources/org/meltzg/jmlm/ui/components/controls/DeviceNameControlView.fxml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-
-<fx:root type="VBox" xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml">
-    <Label text="Enter Device Name" />
-    <TextField fx:id="deviceName" />
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
+<fx:root xmlns:fx="http://javafx.com/fxml" type="Pane"
+         xmlns="http://javafx.com/javafx">
+    <VBox>
+        <Label text="Enter Device Name"/>
+        <TextField fx:id="deviceName"/>
+    </VBox>
 </fx:root>
