initial work on device manager is pretty much done

--- a/src/main/resources/org/meltzg/jmlm/ui/components/controls/LibraryRootSelectionPaneView.fxml
+++ b/src/main/resources/org/meltzg/jmlm/ui/components/controls/LibraryRootSelectionPaneView.fxml
@@ -12,6 +12,7 @@
         <VBox>
             <Label text="Directories to Add"/>
             <ListView fx:id="lstLibraryRoots" prefHeight="200.0" prefWidth="200.0"/>
+            <Button text="Remove Device" onAction="#removeSelectedItem"/>
         </VBox>
     </HBox>
 </fx:root>
